--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "youcan",
+  "name": "boiteEmail",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@material-tailwind/react": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gapi": "^1.0.2",
+    "react-google-login": "^5.2.2",
     "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.10.0",
